# todolist_django_app

./: .dockerignore  .env  .gitignore  README.md  ci.env  docker-compose-ci.yaml  docker-compose.yaml  pyproject.toml
.github/workflows/: actions.yaml  build-actions.yaml  build-deploy-actions.yaml  deploy-actions.yaml
310_venv/: pyvenv.cfg
310_venv/Scripts/: activate  activate.bat  activate.fish  activate.nu  dul-receive-pack  dul-upload-pack
core/: admin.py
core/migrations/: 0001_initial.py
database/postgres_data/base/13756/: 2619
database/postgres_data/base/13757/: pg_internal.init
database/postgres_data/base/16384/: 1247  1249  1259  1259_vm  16385  16386  16391  16393  16394  16397  16399  16401  16402  16405  16407  16411  16421  16428  16442  16447  16448  16452  16453  16455  16463  16469  16483  16497  16498  16499  16504  16505  16517  16518  16519  16523  16524  16526  (+27 more)
database/postgres_data/global/: 1260  1262  2671  2676  pg_control  pg_internal.init
database/postgres_data/pg_stat/: db_0.stat  db_16384.stat  global.stat
deploy/: ci.env  docker-compose-ci.yaml
dev/: docker-compose-db-only.yaml
todolist/: Dockerfile  entrypoint.sh  pyproject.toml  requirements.txt  settings.py
todolist/bot/: models.py  views.py
todolist/bot/management/commands/: runbot.py
todolist/bot/migrations/: 0001_initial.py
todolist/bot/tg/: client.py  dc.py
todolist/core/: serializers.py  tests.py  urls.py  views.py
todolist/goals/: admin.py  models.py  permissions.py  serializers.py  tests.py  urls.py  views.py
todolist/todolist/: settings.py  urls.py
