[tool.poetry]
name = "ToDo List App"
version = "0.1.0"
description = "To do application based on Django 4.1.2"
authors = ["Sergey Protsenko"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1.2"
django-environ = "^0.9.0"
psycopg2-binary = "^2.9.5"
djangorestframework = "^3.14.0"
social-auth-app-django = "^5.0.0"
gunicorn = "^20.1.0"
django-filter = "^22.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
